Comfy_OpenAi_integrated